--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         .flash-card {
             width: 90%;
-            max-width: 500px;
+            max-width: 430px;
             height: 340px;
             background: var(--bond-card-bg);
             border: 2px solid var(--bond-gold);
@@ -80,7 +80,7 @@
 
         .phil-block-btn {
             width: 340px;
-            padding: 12px;
+            padding: 11px;
             background: transparent;
             border: 2px solid var(--sw-yellow);
             color: var(--sw-yellow);
@@ -95,7 +95,7 @@
 <body>
 
 <header>
-    <div class="main-title">JAMES BOND 007</div>
+    <div class="main-title">James Bond - 007</div>
     <div class="sub-premium">Premium Edition</div>
     <div class="sub-version">Version 0.0.7</div>
 </header>
@@ -138,12 +138,9 @@
           
  { actor: "Sean Connery", year: 1962, title: "Dr. No", desc: "James Bond untersucht das Verschwinden eines britischen Agenten auf Jamaika und stößt auf die geheime Basis des mysteriösen Dr. No, der US-Raketenstarts stört. Erstmals treten hier die Organisation SPECTRE und die ikonischen Nebenfiguren wie Honey Ryder in Erscheinung." },
 
-    { actor: "Sean Connery", year: 1963, title: "Liebesgrüße aus Moskau", desc: "In einem Kalten-Krieg-Szenario soll Bond eine Lektor-Dechiffriermaschine von einer sowjetischen Überläuferin in Istanbul stehlen. Es entbrennt eine gefährliche Jagd im Orient-Express, inszeniert von SPECTRE, um Bond als Rache für Dr. Nos Tod zu eliminieren." },
+ { actor: "Sean Connery", year: 1963, title: "Liebesgrüße aus Moskau", desc: "In einem Kalten-Krieg-Szenario soll Bond eine Lektor-Dechiffriermaschine von einer sowjetischen Überläuferin in Istanbul stehlen. Es entbrennt eine gefährliche Jagd im Orient-Express, inszeniert von SPECTRE, um Bond als Rache für Dr. Nos Tod zu eliminieren." },
 
 
-
-  { actor: "Sean Connery", year: 1962, title: "Dr. No", desc: "Bond ermittelt gegen Dr. No auf Jamaika." },
-            { actor: "Sean Connery", year: 1963, title: "Liebesgrüße aus Moskau", desc: "Jagd auf eine Dechiffriermaschine." },
             { actor: "Sean Connery", year: 1964, title: "Goldfinger", desc: "Schutz der Goldreserven." },
             { actor: "Sean Connery", year: 1965, title: "Feuerball", desc: "Suche nach Atombomben." },
             { actor: "David Niven", year: 1967, title: "Casino Royale (I)", desc: "Agenten-Satire." },
