--- a/index.html
+++ b/index.html
@@ -168,7 +168,13 @@
             { actor: "Daniel Craig", year: 2021, title: "Keine Zeit zu sterben", desc: "Das Finale." }
         ],
         hauptfiguren: Array.from({length: 20}, (_, i) => ({ actor: "007", title: `Rolle ${i+1}`, desc: "Charakter-Info." })),
-       
+
+{ actor: "Sean Connery / u.a.", title: "James Bond (007)", desc: "Der Protagonist und MI6-Agent mit der Lizenz zum Töten." },
+  { actor: "Bernard Lee / Judi Dench", title: "M", desc: "Der Leiter des britischen Geheimdienstes MI6 und Bonds Vorgesetzter." },
+  { actor: "Desmond Llewelyn / Ben Whishaw", title: "Q", desc: "Der Leiter der Forschungs- und Entwicklungsabteilung, zuständig für Gadgets." },
+
+
+        
         nebenfiguren: Array.from({length: 20}, (_, i) => ({ actor: "MI6", title: `Nebenfigur ${i+1}`, desc: "Team-Info." })),
 
         zitate: Array.from({length: 20}, (_, i) => ({ actor: "007", title: `Zitat ${i+1}`, desc: "Legendäre Worte." })),
