--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 <body>
 
 <header>
-    <div class="main-title">James Bond - 007</div>
+    <div class="main-title">JAMES BOND - 007</div>
     <div class="sub-premium">Premium Edition</div>
-    <div class="sub-version">Version 0.0.7</div>
+    <div class="sub-version">Version 0.07</div>
 </header>
 
 <div class="nav-grid">
@@ -127,9 +127,9 @@
     <button class="ctrl-btn" onclick="changeCard(1)">Vorwärts ▶</button>
 </div>
 
-<button class="phil-block-btn" onclick="setMode('philosophie')">Philosophie 007</button>
+<button class="phil-block-btn" onclick="setMode('philosophie')">007 Philosophie</button>
 
-<footer>(c) 2026 | Premium Edition Version 0.0.7</footer>
+<footer>(c) 2026 | Premium Edition Version 0.07</footer>
 
 <script>
     const database = {
