--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
     </header>
 
     <div class="menu-grid">
-        <button class="premium-btn" onclick="setCat('Alltag')">Alltag</button>
-        <button class="premium-btn" onclick="setCat('Basis')">Basis</button>
-        <button class="premium-btn" onclick="setCat('Reise')">Reise</button>
-        <button class="premium-btn" onclick="setCat('Hotel')">Hotel</button>
-        <button class="premium-btn" onclick="setCat('Gastro')">Gastro</button>
-        <button class="premium-btn" onclick="setCat('Amt')">Amt</button>
+        <button class="premium-btn" onclick="setCat('Alltag')">Georgfe Lazenby</button>
+        <button class="premium-btn" onclick="setCat('Basis')">Roger Moore</button>
+        <button class="premium-btn" onclick="setCat('Reise')">Timothy Dalton </button>
+        <button class="premium-btn" onclick="setCat('Hotel')">Pierce Brocnan</button>
+        <button class="premium-btn" onclick="setCat('Gastro')">Sean Connery</button>
+        <button class="premium-btn" onclick="setCat('Amt')">Daniel Craig</button>
     </div>
 
     <div class="flashcard" onclick="next()">
@@ -99,8 +99,8 @@
     </div>
 
     <div class="bottom-nav">
-        <div class="footer-btn" onclick="setCat('Home')">Home</div>
-        <div class="footer-btn" onclick="setCat('Vokabeln')">Vokabeln</div>
+        <div class="footer-btn" onclick="setCat('Home')">Start</div>
+        <div class="footer-btn" onclick="setCat('Vokabeln')">Filme</div>
     </div>
 
     <footer>(c) 2026 James Bond Premium App</footer>
@@ -109,7 +109,7 @@
 <script>
     const data = {
         Home: [
-            {ar: "خوش آمدید", ph: "[Khosh amadeid]", de: "Willkommen"},
+            {ar: "Im Auftrag ihrerv Majestätخوش آمدید", ph: "[Khosh amadeid]", de: "Willkommen"},
             {ar: "صبح بخیر", ph: "[Sobh bakhair]", de: "Guten Morgen"},
             {ar: "چطور هستین؟", ph: "[Chetor hastin?]", de: "Wie geht es Ihnen?"},
             {ar: "خوب هستم", ph: "[Khob hastam]", de: "Mir geht es gut"},
