--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <script>
     const data = {
         Home: [
-            {ar: "Im Auftrag ihrerv Majestätخوش آمدید", ph: "[Khosh amadeid]", de: "Willkommen"},
+            {ar: "007", ph: "[Im Auftrag ihrerv Majestät]", de: "Willkommen bei James Bond"},
             {ar: "صبح بخیر", ph: "[Sobh bakhair]", de: "Guten Morgen"},
             {ar: "چطور هستین؟", ph: "[Chetor hastin?]", de: "Wie geht es Ihnen?"},
             {ar: "خوب هستم", ph: "[Khob hastam]", de: "Mir geht es gut"},
