--- a/index.html
+++ b/index.html
@@ -109,10 +109,32 @@
 <script>
     const data = {
         Home: [
+            
             {de: "James Bond 007", ar: "Ian Fleming", ph: "Erfinder & Buchautor (1908-1964)", actor: "Information"},
             {de: "Die Musik", ar: "Monty Norman", ph: "Komponist des 007-Themas", actor: "Information"},
             {de: "Das Drehbuch", ar: "Richard Maibaum", ph: "Schrieb 13 Bond-Filme", actor: "Information"},
-            {de: "Die Regie", ar: "Terence Young", ph: "Regisseur von Dr. No & Feuerball", actor: "Information"}
+            {de: "Die Regie", ar: "Terence Young", ph: "Regisseur von Dr. No & Feuerball", actor: "Information"},
+            {de: "Die Produzenten", ar: "Albert R. Broccoli", ph: "Gründer von Eon Productions", actor: "Information"},
+            {de: "Die Produzenten", ar: "Harry Saltzman", ph: "Partner von Broccoli bis 1975", actor: "Information"},
+            {de: "Der Titelsong", ar: "Shirley Bassey", ph: "Sang drei Bond-Titelsongs", actor: "Information"},
+            {de: "Das Auto", ar: "Aston Martin DB5", ph: "Erstmals in Goldfinger (1964)", actor: "Information"},
+            {de: "Der Geheimdienst", ar: "MI6", ph: "Military Intelligence, Section 6", actor: "Information"},
+            {de: "Der Chef", ar: "M", ph: "Bonds Vorgesetzter im MI6", actor: "Information"},
+            {de: "Der Quartiermeister", ar: "Q", ph: "Leiter der Forschungsabteilung", actor: "Information"},
+            {de: "Die Sekretärin", ar: "Miss Moneypenny", ph: "Sekretärin von M", actor: "Information"},
+            {de: "Der Erzfeind", ar: "Ernst Stavro Blofeld", ph: "Anführer der Terrororganisation SPECTRE", actor: "Information"},
+            {de: "Die Organisation", ar: "SPECTRE", ph: "Special Executive for Counter-intelligence", actor: "Information"},
+            {de: "Das erste Bond-Girl", ar: "Ursula Andress", ph: "Honey Ryder in Dr. No (1962)", actor: "Information"},
+            {de: "Der CIA-Freund", ar: "Felix Leiter", ph: "Bonds engster Verbündeter", actor: "Information"},
+            {de: "Berühmter Drehort", ar: "Pinewood Studios", ph: "Heimat der legendären 007-Stage", actor: "Information"},
+            {de: "Bond-Stunt", ar: "Rick Sylvester", ph: "Der Skisprung über den Abgrund (1977)", actor: "Information"},
+            {de: "Das Markenzeichen", ar: "Gunbarrel Sequence", ph: "Vorspann durch den Pistolenlauf", actor: "Information"},
+            {de: "Das Getränk", ar: "Vesper Martini", ph: "Geschüttelt, nicht gerührt", actor: "Information"},
+            {de: "Gadget-Klassiker", ar: "Der Schleudersitz", ph: "Berühmtestes Extra im Aston Martin", actor: "Information"},
+            {de: "Der Bodyguard", ar: "Beißer (Jaws)", ph: "Richard Kiel mit den Stahlzähnen", actor: "Information"},
+            {de: "Design-Legende", ar: "Ken Adam", ph: "Szenenbildner der großen Sets", actor: "Information"},
+            {de: "Titel-Design", ar: "Maurice Binder", ph: "Schöpfer der Bond-Vorspänne", actor: "Information"}
+        
         ],
         Connery: [
             {de: "Sean Connery", ar: "1930 - 2020", ph: "Geboren in Edinburgh, Schottland", actor: "Sean Connery"},
