--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             {de: "Berühmter Drehort", ar: "Pinewood Studios", ph: "Heimat der legendären 007-Stage", actor: "Information"},
             {de: "Bond-Stunt", ar: "Rick Sylvester", ph: "Der Skisprung über den Abgrund (1977)", actor: "Information"},
             {de: "Das Markenzeichen", ar: "Gunbarrel Sequence", ph: "Vorspann durch den Pistolenlauf", actor: "Information"},
-            {de: "Das Getränk", ar: "Vesper Martini", ph: "Geschüttelt, nicht gerührt", actor: "Information"},
+            {de: "Das Getränk", ar: "Vesper Martini - Geschüttelt, nicht gerührt", ph: "Geschüttelt, nicht gerührt", actor: "Information"},
             {de: "Gadget-Klassiker", ar: "Der Schleudersitz", ph: "Berühmtestes Extra im Aston Martin", actor: "Information"},
             {de: "Der Bodyguard", ar: "Beißer (Jaws)", ph: "Richard Kiel mit den Stahlzähnen", actor: "Information"},
             {de: "Design-Legende", ar: "Ken Adam", ph: "Szenenbildner der großen Sets", actor: "Information"},
